--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-react": "7.26.1",
     "express": "^4.17.3",
     "fake-indexeddb": "^2.0.4",
+    "font-list": "^1.5.1",
     "front-matter": "^2.3.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.2",
